--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,119 @@
-<h1>Mr. Onwude James Uchenna, Esq.</h1>
+<!-- <main>
+  <h1>Welcome to CSE Motors!</h1>
+  <section>
+    <img
+      src="../public/images/vehicles/delorean.jpg"
+      alt="Delorean car image"
+    />
+    <div class="car-info-wrapper">
+      <h2>DMC Delorean</h2>
+      <p>3 Cup holders</p>
+      <p>Superman doors</p>
+      <p>Fuzzy dicel</p>
+      <button>Own Today</button>
+    </div>
+  </section>
+  <section>
+    <h2>DMC Delorean Reviews</h2>
+    <ul>
+      <li>"So fast it's almost like traling in time." (4/5)</li>
+      <li>"Coolest ride on the road." (4/5)</li>
+      <li>"I'm feeling McFly!" (5/5)</li>
+      <li>"The most furious ride of our day." (4.5/5)</li>
+      <li>"80's livin and I love it!" (5/5)</li>
+    </ul>
+  </section>
+  <section>
+    <h2>Delorean Upgrade</h2>
+    <div class="upgrade-types">
+      <div class="upgrade-img-wrapper">
+        <img
+          src="../public/images/upgrades/flux-cap.png"
+          alt="flux capacitor"
+          width="50"
+          height="50"
+        />
+      </div>
+      <a href="#">Flux Capacitor</a>
+    </div>
+  </section>
+</main> -->
+
+<main>
+      <h1>Welcome to CSE Motors!</h1>
+      <section class="hero">
+        <img
+          src="../public/images/vehicles/delorean.jpg"
+          alt="Delorean car image"
+          width="100"
+          height="100"
+        />
+        <div class="car-info-wrapper">
+          <h2>DMC Delorean</h2>
+          <p>3 Cup holders</p>
+          <p>Superman doors</p>
+          <p>Fuzzy dicel</p>
+          <button class="cta-button">Own Today</button>
+        </div>
+      </section>
+      <div class="lg-grid">
+        <section class="reviews-wrapper">
+          <h2>DMC Delorean Reviews</h2>
+          <ul>
+            <li>"So fast it's almost like traling in time." (4/5)</li>
+            <li>"Coolest ride on the road." (4/5)</li>
+            <li>"I'm feeling McFly!" (5/5)</li>
+            <li>"The most furious ride of our day." (4.5/5)</li>
+            <li>"80's livin and I love it!" (5/5)</li>
+          </ul>
+        </section>
+        <section class="featured-vehicles">
+          <h2>Delorean Upgrade</h2>
+          <div class="vehicle-grid">
+            <div class="upgrade-types">
+              <div class="upgrade-img-wrapper">
+                <img
+                  src="../public/images/upgrades/flux-cap.png"
+                  alt="flux capacitor"
+                  width="50"
+                  height="50"
+                />
+              </div>
+              <a href="#">Flux Capacitor</a>
+            </div>
+            <div class="upgrade-types">
+              <div class="upgrade-img-wrapper">
+                <img
+                  src="../public/images/upgrades/flame.jpg"
+                  alt="flux capacitor"
+                  width="50"
+                  height="50"
+                />
+              </div>
+              <a href="#">Flame decals</a>
+            </div>
+            <div class="upgrade-types">
+              <div class="upgrade-img-wrapper">
+                <img
+                  src="../public/images/upgrades/bumper_sticker.jpg"
+                  alt="flux capacitor"
+                  width="50"
+                  height="50"
+                />
+              </div>
+              <a href="#">Bumper Stickers</a>
+            </div>
+            <div class="upgrade-types">
+              <div class="upgrade-img-wrapper">
+                <img
+                  src="../public/images/upgrades/hub-cap.jpg"
+                  alt="flux capacitor"
+                  width="50"
+                  height="50"
+                />
+              </div>
+              <a href="#">Hub Caps</a>
+            </div>
+          </div>
+        </section>
+    </main>
