--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -1,9 +1,19 @@
-<nav>
+<!-- <nav>
   <ul>
     <li>Home</li>
     <li>Custom</li>
     <li>Sedan</li>
     <li>SUV</li>
     <li>Trucks</li>
+  </ul>
+</nav> -->
+
+<nav>
+  <ul>
+    <li><a href="#">Home</a></li>
+    <li><a href="#">Custom</a></li>
+    <li><a href="#">Sedan</a></li>
+    <li><a href="#">SUV</a></li>
+    <li><a href="#">Trucks</a></li>
   </ul>
 </nav>
