--- a/views/index.ejs
+++ b/views/index.ejs
@@ -43,7 +43,7 @@
       <h1>Welcome to CSE Motors!</h1>
       <section class="hero">
         <img
-          src="../public/images/vehicles/delorean.jpg"
+          src="/images/vehicles/delorean.jpg"
           alt="Delorean car image"
           width="100"
           height="100"
@@ -73,8 +73,8 @@
             <div class="upgrade-types">
               <div class="upgrade-img-wrapper">
                 <img
-                  src="../public/images/upgrades/flux-cap.png"
-                  alt="flux capacitor"
+                  src="/images/upgrades/flux-cap.png"
+                  alt="flux capacitor image"
                   width="50"
                   height="50"
                 />
@@ -84,8 +84,8 @@
             <div class="upgrade-types">
               <div class="upgrade-img-wrapper">
                 <img
-                  src="../public/images/upgrades/flame.jpg"
-                  alt="flux capacitor"
+                  src="/images/upgrades/flame.jpg"
+                  alt="flame decals image"
                   width="50"
                   height="50"
                 />
@@ -95,8 +95,8 @@
             <div class="upgrade-types">
               <div class="upgrade-img-wrapper">
                 <img
-                  src="../public/images/upgrades/bumper_sticker.jpg"
-                  alt="flux capacitor"
+                  src="/images/upgrades/bumper_sticker.jpg"
+                  alt="Bumper Stickers image"
                   width="50"
                   height="50"
                 />
@@ -106,8 +106,8 @@
             <div class="upgrade-types">
               <div class="upgrade-img-wrapper">
                 <img
-                  src="../public/images/upgrades/hub-cap.jpg"
-                  alt="flux capacitor"
+                  src="/images/upgrades/hub-cap.jpg"
+                  alt="Hub Caps image"
                   width="50"
                   height="50"
                 />
