--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,78 +1,69 @@
-<main>
-      <h1>Welcome to CSE Motors!</h1>
-      <section class="hero">
-        <img
-          src="/images/vehicles/delorean.jpg"
-          alt="Delorean car image"
-          width="100"
-          height="100"
-        />
-        <div class="car-info-wrapper">
-          <h2>DMC Delorean</h2>
-          <p>3 Cup holders</p>
-          <p>Superman doors</p>
-          <p>Fuzzy dicel</p>
-          <button class="cta-button">Own Today</button>
-        </div>
-      </section>
-      <div class="lg-grid">
-        <section class="reviews-wrapper">
-          <h2>DMC Delorean Reviews</h2>
-          <ul>
-            <li>"So fast it's almost like traling in time." (4/5)</li>
-            <li>"Coolest ride on the road." (4/5)</li>
-            <li>"I'm feeling McFly!" (5/5)</li>
-            <li>"The most furious ride of our day." (4.5/5)</li>
-            <li>"80's livin and I love it!" (5/5)</li>
-          </ul>
-        </section>
-        <section class="featured-vehicles">
-          <h2>Delorean Upgrade</h2>
-          <div class="vehicle-grid">
-            <div class="upgrade-types">
-              <div class="upgrade-img-wrapper">
-                <img
-                  src="/images/upgrades/flux-cap.png"
-                  alt="flux capacitor image"
-                  width="50"
-                  height="50"
-                />
-              </div>
-              <a href="#">Flux Capacitor</a>
-            </div>
-            <div class="upgrade-types">
-              <div class="upgrade-img-wrapper">
-                <img
-                  src="/images/upgrades/flame.jpg"
-                  alt="flame decals image"
-                  width="50"
-                  height="50"
-                />
-              </div>
-              <a href="#">Flame decals</a>
-            </div>
-            <div class="upgrade-types">
-              <div class="upgrade-img-wrapper">
-                <img
-                  src="/images/upgrades/bumper_sticker.jpg"
-                  alt="Bumper Stickers image"
-                  width="50"
-                  height="50"
-                />
-              </div>
-              <a href="#">Bumper Stickers</a>
-            </div>
-            <div class="upgrade-types">
-              <div class="upgrade-img-wrapper">
-                <img
-                  src="/images/upgrades/hub-cap.jpg"
-                  alt="Hub Caps image"
-                  width="50"
-                  height="50"
-                />
-              </div>
-              <a href="#">Hub Caps</a>
-            </div>
+<%# Unit 1, Assignment 1 %>
+<h1>Welcome to CSE Motors!</h1>
+<%# Unit 4, Sessions & Messages activity %> <%- messages() %>
+
+<section id="hero">
+  <ul>
+    <li>
+      <h2>DMC Delorean</h2>
+    </li>
+    <li>3 Cup holders</li>
+    <li>Superman doors</li>
+    <li>Fuzzy dice!</li>
+    <li><button id="actionbtn">Own Today</button></li>
+  </ul>
+</section>
+<div class="flex-content">
+  <section id="review">
+    <h2>DMC Delorean Reviews</h2>
+    <ul>
+      <li>"So fast it's almost like traveling in time." (4/5)</li>
+      <li>"Coolest ride on the road." (4/5)</li>
+      <li>"I'm feeling McFly!" (5/5)</li>
+      <li>"The most futuristic ride of our day." (4.5/5)</li>
+      <li>"80's livin and I love it!" (5/5)</li>
+    </ul>
+  </section>
+  <section id="add-ons">
+    <h2>Delorean Upgrades</h2>
+    <div class="flex">
+      <a href="#" title="flux-capacitor">
+        <figure>
+          <div class="add-col">
+            <img src="./images/upgrades/flux-cap.png" alt="Flux-Capacitor" />
           </div>
-        </section>
-    </main>
+          <figcaption>Flux Capacitor</figcaption>
+        </figure>
+      </a>
+      <a href="#" title="flame decals">
+        <figure>
+          <div class="add-col">
+            <img src="./images/upgrades/flame.jpg" alt="flame decal" />
+          </div>
+          <figcaption>Flame Decals</figcaption>
+        </figure>
+      </a>
+    </div>
+    <div class="flex">
+      <a href="#" title="bumper stickers">
+        <figure>
+          <div class="add-col">
+            <img
+              src="./images/upgrades/bumper_sticker.jpg"
+              alt="Bumper Stickers"
+            />
+          </div>
+          <figcaption>Bumper Stickers</figcaption>
+        </figure>
+      </a>
+      <a href="#" title="hub caps">
+        <figure>
+          <div class="add-col">
+            <img src="./images/upgrades/hub-cap.jpg" alt="Hub Caps" />
+          </div>
+          <figcaption>Hub Caps</figcaption>
+        </figure>
+      </a>
+    </div>
+  </section>
+</div>
