--- a/views/errors/error.ejs
+++ b/views/errors/error.ejs
@@ -1,8 +1,2 @@
-<!-- views/errors/error.ejs -->
-<% if (title) { %>
-<h1><%= title %></h1>
-<% } else {
-  res.redirect('/')
-} %>
-
+<h1><%- title %></h1>
 <%- message %>
