--- a/views/inventory/classification.ejs
+++ b/views/inventory/classification.ejs
@@ -1,10 +1,3 @@
-<%# Unit 3, Build Classification View activity %>
-<% if (title) { %>
-<h1><%= title %> </h1>
-<% } else {
-  res.redirect('/')
-} %>
-
-<%# messages() %>
-
-<%- grid %>
+<%# Building Classification View activity %> <% if (title) { %>
+<h1><%= title %></h1>
+<% } else { res.redirect('/') } %> <%# messages() %> <%- grid %>
